completed the navbar and make it fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <div class="logo">
         <img src="./assets/Icon.png" alt="logo" />
-        <h2>Nextcent</h2>
+        <h2><a href="#home">Nextcent</a></h2>
       </div>
       <div class="links">
         <li><a href="#home">Home</a></li>
