community part completed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,35 @@
             <h2>Manage your entire community <br />in a single system</h2>
             <p>Who is Nextcent suitable for?</p>
         </div>
-        <div class="down"></div>
+        <div class="down">
+            <div class="card">
+                <div class="topPart">
+                    <img src="./assets/comm1.png" alt="comm1" />
+                    <h3>Membership <br> Organisations</h3>
+                </div>
+                <div class="bottomPart">
+                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="topPart">
+                    <img src="./assets/comm2.png" alt="comm2" />
+                    <h3>National <br>Associations</h3>
+                </div>
+                <div class="bottomPart">
+                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="topPart">
+                    <img src="./assets/comm3.png" alt="comm3" />
+                    <h3>Clubs And <br>Groups</h3>
+                </div>
+                <div class="bottomPart">
+                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+            </div>
+        </div>
       </div>
     </main>
   </body>
