product first part is completed

--- a/index.html
+++ b/index.html
@@ -63,37 +63,75 @@
 
       <div id="Feature">
         <div class="top">
-            <h2>Manage your entire community <br />in a single system</h2>
-            <p>Who is Nextcent suitable for?</p>
+          <h2>Manage your entire community <br />in a single system</h2>
+          <p>Who is Nextcent suitable for?</p>
         </div>
         <div class="down">
-            <div class="card">
-                <div class="topPart">
-                    <img src="./assets/comm1.png" alt="comm1" />
-                    <h3>Membership <br> Organisations</h3>
-                </div>
-                <div class="bottomPart">
-                    <p>Our membership management software provides full automation of membership renewals and payments</p>
-                </div>
+          <div class="card">
+            <div class="topPart">
+              <img src="./assets/comm1.png" alt="comm1" />
+              <h3>
+                Membership
+                Organisations
+              </h3>
             </div>
-            <div class="card">
-                <div class="topPart">
-                    <img src="./assets/comm2.png" alt="comm2" />
-                    <h3>National <br>Associations</h3>
-                </div>
-                <div class="bottomPart">
-                    <p>Our membership management software provides full automation of membership renewals and payments</p>
-                </div>
+            <div class="bottomPart">
+              <p>
+                Our membership management software provides full automation of
+                membership renewals and payments
+              </p>
             </div>
-            <div class="card">
-                <div class="topPart">
-                    <img src="./assets/comm3.png" alt="comm3" />
-                    <h3>Clubs And <br>Groups</h3>
-                </div>
-                <div class="bottomPart">
-                    <p>Our membership management software provides full automation of membership renewals and payments</p>
-                </div>
+          </div>
+          <div class="card">
+            <div class="topPart">
+              <img src="./assets/comm2.png" alt="comm2" />
+              <h3>National Associations</h3>
             </div>
+            <div class="bottomPart">
+              <p>
+                Our membership management software provides full automation of
+                membership renewals and payments
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="topPart">
+              <img src="./assets/comm3.png" alt="comm3" />
+              <h3>Clubs And <br />Groups</h3>
+            </div>
+            <div class="bottomPart">
+              <p>
+                Our membership management software provides full automation of
+                membership renewals and payments
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="Product">
+        <div class="product-first">
+          <div class="unlock-first">
+            <img src="./assets/Frame 35.png" alt="frame" />
+          </div>
+          <div class="unlock-second">
+            <div class="unlock-second-sub1">
+              <h2>The unseen of spending three years at Pixelgrade</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
+                amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
+                Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+                tristique iaculis. Nullam pulvinar sit amet risus pretium
+                auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus
+                sem. Donec elementum pulvinar odio.
+              </p>
+            </div>
+            <div class="unlock-second-sub2">
+                <button>Learn More</button>
+            </div>
+          </div>
+        </div>
+        <div class="product-second">
+            <h2>jhbmkfgndfn</h2>
         </div>
       </div>
     </main>
