--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@
           <div class="card">
             <div class="topPart">
               <img src="./assets/comm1.png" alt="comm1" />
-              <h3>
-                Membership
-                Organisations
-              </h3>
+              <h3>Membership Organisations</h3>
             </div>
             <div class="bottomPart">
               <p>
@@ -126,12 +123,49 @@
               </p>
             </div>
             <div class="unlock-second-sub2">
-                <button>Learn More</button>
+              <button>Learn More</button>
             </div>
           </div>
         </div>
         <div class="product-second">
-            <h2>jhbmkfgndfn</h2>
+          <div class="product-second-sub1">
+            <h2>Helping a local <br /><span>business reinvent itself</span></h2>
+            <p>We reached here with our hard work and dedication</p>
+          </div>
+          <div class="product-second-sub2">
+            <div class="row1">
+              <img src="./assets/1.png" alt="icon" />
+              <img src="./assets/2.png" alt="icon" />
+            </div>
+            <div class="row2">
+              <img src="./assets/3.png" alt="icon" />
+              <img src="./assets/4.png" alt="icon" />
+            </div>
+          </div>
+        </div>
+        <div class="product-third">
+          <div class="product-third-main">
+            <div class="product-third-sub1">
+              <img src="./assets/pana.png" alt="mobile " />
+            </div>
+            <div class="product-third-sub2">
+              <div class="firstPart">
+                <h2>How to design your site footer like <br>we did</h2>
+                <p>Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus ipsum id gravida.</p>
+              </div>
+              <div class="lastPart">
+                <button>Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="product-fourth">
+          <div class="product-fourth-sub1">
+            <h2>first</h2>
+          </div>
+          <div class="product-fourth-sub2">
+            <h2>second</h2>
+          </div>
         </div>
       </div>
     </main>
