completed product second and third part

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
         <div class="product-fourth">
           <div class="product-fourth-sub1">
-            <h2>first</h2>
+            <img src="./assets/image 9.png" alt="image9">
           </div>
           <div class="product-fourth-sub2">
             <h2>second</h2>
