--- a/index.html
+++ b/index.html
@@ -164,7 +164,29 @@
             <img src="./assets/image 9.png" alt="image9">
           </div>
           <div class="product-fourth-sub2">
-            <h2>second</h2>
+            <div class="partOne">
+              <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
+              <h4>Tim Smith</h4>
+              <span>British Dragon Boat Racing Association</span>
+            </div>
+            <div class="partTwo">
+              <div class="partTwo-sub1">
+                <img src="./assets/client1.svg" alt="client1" /><img
+                src="./assets/client2.svg"
+                alt="client2"
+              /><img src="./assets/client3.png" alt="client3" /><img
+                src="./assets/client4.svg"
+                alt="client4"
+              /><img src="./assets/client5.png" alt="client5" /><img
+                src="./assets/client6.png"
+                alt="client6"
+              />
+              </div>
+              <div class="partTwo-sub2">
+                <h4>Meet all customers</h4>
+                <img src="./assets/Right.png" alt="right">
+              </div>
+            </div>
           </div>
         </div>
       </div>
