--- a/index.html
+++ b/index.html
@@ -150,8 +150,18 @@
             </div>
             <div class="product-third-sub2">
               <div class="firstPart">
-                <h2>How to design your site footer like <br>we did</h2>
-                <p>Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus ipsum id gravida.</p>
+                <h2>How to design your site footer like <br />we did</h2>
+                <p>
+                  Donec a eros justo. Fusce egestas tristique ultrices. Nam
+                  tempor, augue nec tincidunt molestie, massa nunc varius arcu,
+                  at scelerisque elit erat a magna. Donec quis erat at libero
+                  ultrices mollis. In hac habitasse platea dictumst. Vivamus
+                  vehicula leo dui, at porta nisi facilisis finibus. In euismod
+                  augue vitae nisi ultricies, non aliquet urna tincidunt.
+                  Integer in nisi eget nulla commodo faucibus efficitur quis
+                  massa. Praesent felis est, finibus et nisi ac, hendrerit
+                  venenatis libero. Donec consectetur faucibus ipsum id gravida.
+                </p>
               </div>
               <div class="lastPart">
                 <button>Learn More</button>
@@ -161,35 +171,91 @@
         </div>
         <div class="product-fourth">
           <div class="product-fourth-sub1">
-            <img src="./assets/image 9.png" alt="image9">
+            <img src="./assets/image 9.png" alt="image9" />
           </div>
           <div class="product-fourth-sub2">
             <div class="partOne">
-              <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
+              <p>
+                Maecenas dignissim justo eget nulla rutrum molestie. Maecenas
+                lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin
+                eu enim metus. Vivamus sed libero ornare, tristique quam in,
+                gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi
+                laoreet elit at ligula molestie, nec molestie mi blandit.
+                Suspendisse cursus tellus sed augue ultrices, quis tristique
+                nulla sodales. Suspendisse eget lorem eu turpis vestibulum
+                pretium. Suspendisse potenti. Quisque malesuada enim sapien,
+                vitae placerat ante feugiat eget. Quisque vulputate odio neque,
+                eget efficitur libero condimentum id. Curabitur id nibh id sem
+                dignissim finibus ac sit amet magna.
+              </p>
               <h4>Tim Smith</h4>
               <span>British Dragon Boat Racing Association</span>
             </div>
             <div class="partTwo">
               <div class="partTwo-sub1">
                 <img src="./assets/client1.svg" alt="client1" /><img
-                src="./assets/client2.svg"
-                alt="client2"
-              /><img src="./assets/client3.png" alt="client3" /><img
-                src="./assets/client4.svg"
-                alt="client4"
-              /><img src="./assets/client5.png" alt="client5" /><img
-                src="./assets/client6.png"
-                alt="client6"
-              />
+                  src="./assets/client2.svg"
+                  alt="client2"
+                /><img src="./assets/client3.png" alt="client3" /><img
+                  src="./assets/client4.svg"
+                  alt="client4"
+                /><img src="./assets/client5.png" alt="client5" /><img
+                  src="./assets/client6.png"
+                  alt="client6"
+                />
               </div>
               <div class="partTwo-sub2">
                 <h4>Meet all customers</h4>
-                <img src="./assets/Right.png" alt="right">
+                <img src="./assets/Right.png" alt="right" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id = "Testimonial" class="product-five">
+          <div class="product-five-first">
+            <h2>Caring is the new marketing</h2>
+            <p>
+              The Nexcent blog is the best place to read about the latest
+              membership insights, trends and more. See who's joining the
+              community, read about how our community are increasing their
+              membership income and lot's more.​
+            </p>
+          </div>
+          <div class="product-five-second">
+            <div class="card">
+              <img src="./assets/image 18.png" alt="image18" />
+              <div class="content">
+                <h4>Creating Streamlined Safeguarding Processes with OneRen</h4>
+                <div class="content-sub">
+                  <h4>Readmore</h4>
+                  <img src="./assets/Right.png" alt="right" />
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./assets/image 19.png" alt="image19" />
+              <div class="content">
+                <h4>What are your safeguarding responsibilities and how can you manage them?</h4>
+                <div class="content-sub">
+                  <h4>Readmore</h4>
+                  <img src="./assets/Right.png" alt="right" />
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <img src="./assets/image 20.png" alt="image20" />
+              <div class="content">
+                <h4>Revamping the Membership Model with Triathlon <br> Australia</h4>
+                <div class="content-sub">
+                  <h4>Readmore</h4>
+                  <img src="./assets/Right.png" alt="right" />
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      div
     </main>
   </body>
 </html>
