add FAQ section with layout and styling enhancements

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
           </div>
         </div>
-        <div id = "Testimonial" class="product-five">
+        <div id="Testimonial" class="product-five">
           <div class="product-five-first">
             <h2>Caring is the new marketing</h2>
             <p>
@@ -235,7 +235,10 @@
             <div class="card">
               <img src="./assets/image 19.png" alt="image19" />
               <div class="content">
-                <h4>What are your safeguarding responsibilities and how can you manage them?</h4>
+                <h4>
+                  What are your safeguarding responsibilities and how can you
+                  manage them?
+                </h4>
                 <div class="content-sub">
                   <h4>Readmore</h4>
                   <img src="./assets/Right.png" alt="right" />
@@ -245,7 +248,10 @@
             <div class="card">
               <img src="./assets/image 20.png" alt="image20" />
               <div class="content">
-                <h4>Revamping the Membership Model with Triathlon <br> Australia</h4>
+                <h4>
+                  Revamping the Membership Model with Triathlon <br />
+                  Australia
+                </h4>
                 <div class="content-sub">
                   <h4>Readmore</h4>
                   <img src="./assets/Right.png" alt="right" />
@@ -255,7 +261,55 @@
           </div>
         </div>
       </div>
-      div
+      <div id="FAQ" class="footer">
+        <div class="footer-first">
+          <h1>Pellentesque suscipit fringilla libero eu.</h1>
+          <button>Get a demo &nbsp;&rarr;</button>
+        </div>
+        <div class="footer-sec">
+          <div class="partOne">
+            <div class="footer-logo">
+              <img src="./assets/Icon.png" alt="logo" />
+              <h2>Nextcent</h2>
+            </div>
+            <div class="copyright">
+              <p>Copyright © 2020 Nexcent ltd.</p>
+              <p>All rights reserved</p>
+            </div>
+            <div class="socialLinks">
+              <img src="./assets/insta.png" alt="insta" />
+              <img src="./assets/browser.png"alt="browser"/>
+              <img src="./assets/twitter.png" alt="twitter" />
+              <img src="./assets/youtube.png" alt="youtube"/>
+            </div>
+          </div>
+          <div class="partTwo">
+            <div class="footer-list-1">
+              <h3>Company</h3>
+              <li>About us</li>
+              <li>Blog</li>
+              <li>Contact us</li>
+              <li>Pricing</li>
+              <li>Testimonials</li>
+            </div>
+            <div class="footer-list-1">
+              <h3>Support</h3>
+              <li>Help center</li>
+              <li>Terms of service</li>
+              <li>Legal</li>
+              <li>Privacy policy</li>
+              <li>Status</li>
+            </div>
+            <div class="footer-list-1">
+              <h3>Stay up to date</h3>
+              <label for="search" class="search-container">
+                <input type="search" name="search" id="search" placeholder="Your email address" />
+                <img src="./assets/send.png" alt="">
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
